Fix vertical align on hello friend

--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@ code {
 }
 
 div.pg1 {
-    margin-top: 50%;
-    margin-bottom: 50%;
+    margin-top: 50vh;
+    margin-bottom: 50vh;
 }
 
 /*@media only screen and (max-width: 600px) {
